--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>repository.jboss.org-public</id>
+            <name>JBoss repository</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
     <dependencies>
         <!-- SLF4J -->
         <dependency>
@@ -41,6 +48,20 @@
             <version>2.1</version>
             <scope>compile</scope>
         </dependency>
+        <!-- JMS -->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>jms</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- H2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.165</version>
+            <scope>compile</scope>
+        </dependency>    
     </dependencies>
     <build>
         <plugins>
