--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,14 @@
             <artifactId>gson</artifactId>
             <version>2.1</version>
             <scope>compile</scope>
-        </dependency>  
+        </dependency> 
+        <!-- H2-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.165</version>
+            <scope>compile</scope>
+        </dependency>   
     </dependencies>
     <build>
         <plugins>
